--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,5 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Sora', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    background-color: #1e1e1e;
+    height: 100vh;
+    overflow: auto;
 }
