added social media icons

--- a/src/pages/Pages.css
+++ b/src/pages/Pages.css
@@ -16,3 +16,12 @@
     line-height: 2em;
 }
 
+.bi-linkedin {
+    color: #0e76a8;
+    font-size: 3ch;
+}
+
+.bi-github {
+    color: #6f42c1;
+    font-size: 3ch;
+}
