--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap');
 body {
-    font-family: 'Lora', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     background: #000000;
     color: white;
 }
